

## Panda-Tray:
0.11
* Bug fixes:
- <TODO: busy doing folder syncing - specifically, upload/delete folder depending>

0.10
* Bug fixes:
- Changed panda in tray icon menu, so it doesn't look like it's crying anymore
* New funtionality
- New version of panda head for small icons
- Added Storage provider setting
- More informative status messages w.r.t connection attemps
- Status messages now include checking for updates

0.9
* Bug fixes:
- Application now works for all users
- Syncronisation now works a bit better
- Changing login credentials now works better (no need to exit and restart)
- Status updates formatting fixed
* New functionality
- The panda is less chatty - it sleeps for a while after uploading/downloading
- Checking for updates before doing anything else


0.5
Bug fixes:
- 
New functionality:
- only allows one instance to run at a time